[workspace]
members = ["contracts/*"]

[profile.release.package.WEFUND]
codegen-units = 1
incremental = false

[profile.release.package.Vesting]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
