[package]
name = "wefund17"
version = "17.2.3"
authors = ["Alenzer <alenzer@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
# cosmwasm-std = "1.0.0-beta"
# cosmwasm-storage = "1.0.0-beta"
# thiserror = { version = "1.0.23" }
# schemars = "0.8.1"
# serde = { version = "1.0.125", default-features = false, features = ["derive"] }

cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = "0.8.1"
cw2 = "0.8.1"
cw20 = "0.8.1"
schemars = "0.8.3"
cosmwasm-bignumber = "2.2.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
Vesting = { path = "../Vesting", version = "0.0.1" }
[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
# cosmwasm-schema = { version = "1.0.0-beta" }
